tests/snapshots/sfc/ts/script_setup__script_with_interfaces_before_script_setup.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock, createCommentVNode as _createCommentVNode } from "vue"

import { ref } from 'vue'

export interface User {
  id: number;
  name: string;
}

export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const user = ref<User | null>(null)

return (_ctx: any,_cache: any) => {
  return (user.value)
    ? (_openBlock(), _createElementBlock("div", { key: 0 }, _toDisplayString(user.value.name), 1 /* TEXT */))
    : _createCommentVNode("v-if", true)
}
}

})
