tests/snapshots/sfc/ts/script_setup__script_with_type_definitions_and_script_setup.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock, Fragment as _Fragment, renderList as _renderList } from "vue"

import type { RouteLocation } from "vue-router";


interface TabItem {
  name: string;
  label: string;
}

export type { TabItem };

export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    items: { type: Array, required: true }
  },
  setup(__props: any) {


return (_ctx: any,_cache: any) => {
  return (_openBlock(true), _createElementBlock(_Fragment, null, _renderList(__props.items, (item) => {
    return (_openBlock(), _createElementBlock("div", { key: item.name }, _toDisplayString(item.label), 1 /* TEXT */))
  }), 128 /* KEYED_FRAGMENT */))
}
}

})
