tests/snapshots/sfc/ts/script_setup__template_with_event_handler.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

import { ref } from 'vue'


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const count = ref(0)
const increment = () => count.value++

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("button", { onClick: increment }, _toDisplayString(count.value), 1 /* TEXT */))
}
}

})
