tests/snapshots/sfc/ts/script_setup__top_level_await.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { withAsyncContext as _withAsyncContext, defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

import { ref } from 'vue'


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  async setup(__props) {

let __temp: any, __restore: any

const count = ref(0)
;(
  ([__temp,__restore] = _withAsyncContext(() => new Promise(r => setTimeout(r, 100)))),
  await __temp,
  __restore()
)
count.value = 1

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(count.value), 1 /* TEXT */))
}
}

})
