tests/snapshots/sfc/ts/script_setup__top_level_await_with_destructuring.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { withAsyncContext as _withAsyncContext, defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock, createCommentVNode as _createCommentVNode, unref as _unref } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  async setup(__props) {

let __temp: any, __restore: any

const { data, error } =  (
  ([__temp,__restore] = _withAsyncContext(() => useFetch('/api/data'))),
  __temp = await __temp,
  __restore(),
  __temp
)

return (_ctx: any,_cache: any) => {
  return (_unref(error))
    ? (_openBlock(), _createElementBlock("div", { key: 0 }, "Error: " + _toDisplayString(_unref(error)), 1 /* TEXT */))
    : (_openBlock(), _createElementBlock("div", { key: 1 }, _toDisplayString(_unref(data)), 1 /* TEXT */))
}
}

})
