tests/snapshots/sfc/ts/script_setup__v_else_if_chain_with_ref_bindings.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 152
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { createElementVNode as _createElementVNode, normalizeClass as _normalizeClass, openBlock as _openBlock, createElementBlock as _createElementBlock, Fragment as _Fragment, createCommentVNode as _createCommentVNode } from "vue"

const _hoisted_1 = /*#__PURE__*/ _createElementVNode("h4", null, "AST")
const _hoisted_2 = /*#__PURE__*/ _createElementVNode("h4", null, "Helpers")
const _hoisted_3 = /*#__PURE__*/ _createElementVNode("h4", null, "SFC")

import { ref, computed } from 'vue';


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const output = ref<{ code: string } | null>({ code: 'test' });
const activeTab = ref<'code' | 'ast' | 'helpers' | 'sfc'>('code');
const isTypeScript = computed(() => true);
const codeViewMode = ref<'ts' | 'js'>('ts');

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, [
    (output.value)
      ? (_openBlock(), _createElementBlock(_Fragment, { key: 0 }, [
        (activeTab.value === 'code')
          ? (_openBlock(), _createElementBlock("div", {
            key: 1,
            class: "code-output"
          }, [
            (isTypeScript.value)
              ? (_openBlock(), _createElementBlock("div", {
                key: 2,
                class: "code-mode-toggle"
              }, [
                _createElementVNode("button", {
                  class: _normalizeClass(['btn', { active: codeViewMode.value === 'ts' }]),
                  onClick: _cache[0] || (_cache[0] = ($event: any) => (codeViewMode.value = 'ts'))
                }, "TS", 2 /* CLASS */),
                _createElementVNode("button", {
                  class: _normalizeClass(['btn', { active: codeViewMode.value === 'js' }]),
                  onClick: _cache[1] || (_cache[1] = ($event: any) => (codeViewMode.value = 'js'))
                }, "JS", 2 /* CLASS */)
              ]))
              : _createCommentVNode("v-if", true)
          ]))
          : (activeTab.value === 'ast')
            ? (_openBlock(), _createElementBlock("div", {
              key: 3,
              class: "ast-output"
            }, [
              _hoisted_1
            ]))
          : (activeTab.value === 'helpers')
            ? (_openBlock(), _createElementBlock("div", {
              key: 4,
              class: "helpers-output"
            }, [
              _hoisted_2
            ]))
          : (activeTab.value === 'sfc')
            ? (_openBlock(), _createElementBlock("div", {
              key: 5,
              class: "sfc-output"
            }, [
              _hoisted_3
            ]))
          : _createCommentVNode("v-if", true)
      ], 64 /* STABLE_FRAGMENT */))
      : _createCommentVNode("v-if", true)
  ]))
}
}

})
