tests/snapshots/sfc/ts/script_setup__v_for_with_imported_and_local_values.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { toDisplayString as _toDisplayString, createElementVNode as _createElementVNode, openBlock as _openBlock, createElementBlock as _createElementBlock, Fragment as _Fragment, unref as _unref, renderList as _renderList } from "vue"

import { ref } from 'vue'
import { OPTIONS } from './options'


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const localItems = ref(['a', 'b', 'c'])

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, [
    _createElementVNode("select", null, [
      (_openBlock(true), _createElementBlock(_Fragment, null, _renderList(_unref(OPTIONS), (opt) => {
        return (_openBlock(), _createElementBlock("option", {
          key: opt.value,
          value: opt.value
        }, _toDisplayString(opt.label), 9 /* TEXT, PROPS */, ["value"]))
      }), 128 /* KEYED_FRAGMENT */))
    ]),
    _createElementVNode("ul", null, [
      (_openBlock(true), _createElementBlock(_Fragment, null, _renderList(localItems.value, (item) => {
        return (_openBlock(), _createElementBlock("li", { key: item }, _toDisplayString(item), 1 /* TEXT */))
      }), 128 /* KEYED_FRAGMENT */))
    ])
  ]))
}
}

})
