tests/snapshots/sfc/ts/script_setup__v_model_on_component_with_ref_binding_should_not_duplicate_value.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createBlock as _createBlock } from "vue"

import { ref } from 'vue';
import MyInput from './MyInput.vue';


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const message = ref('hello');

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createBlock(MyInput, {
    modelValue: message.value,
    "onUpdate:modelValue": _cache[0] || (_cache[0] = ($event: any) => ((message).value = $event))
  }, null, 8 /* PROPS */, ["modelValue"]))
}
}

})
